--- a/docs/docs-ref-autogen/excel/excel.interfaces.conditionalrangeformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.conditionalrangeformatupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 11672e06bb8f5014b2c195f1ab506775e081db16
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: adbf37a1ff2f9fade6040c521fa59df00758a369
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26233356"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29980994"
 items:
 - uid: excel.Excel.Interfaces.ConditionalRangeFormatUpdateData
-  summary: <span data-ttu-id="f1a22-101">更新数据的 ConditionalRangeFormat 对象，在"conditionalRangeFormat.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="f1a22-101">An interface for updating data on the ConditionalRangeFormat object, for use in "conditionalRangeFormat.set({ ... })".</span></span>
+  summary: <span data-ttu-id="d73fc-101">更新对 ConditionalRangeFormat 对象，用于数据接口"conditionalRangeFormat.set (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="d73fc-101">An interface for updating data on the ConditionalRangeFormat object, for use in "conditionalRangeFormat.set(<!-- -->{ ... }<!-- -->)".</span></span>
   name: Excel.Interfaces.ConditionalRangeFormatUpdateData
   fullName: Excel.Interfaces.ConditionalRangeFormatUpdateData
   langs:
@@ -21,10 +21,10 @@ items:
   - excel.Excel.Interfaces.ConditionalRangeFormatUpdateData.numberFormat
 - uid: excel.Excel.Interfaces.ConditionalRangeFormatUpdateData.borders
   summary: >-
-    <span data-ttu-id="f1a22-102">应用于整个条件格式范围的 border 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="f1a22-102">Collection of border objects that apply to the overall conditional format range.</span></span>
+    <span data-ttu-id="d73fc-102">应用于整个条件格式范围的 border 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="d73fc-102">Collection of border objects that apply to the overall conditional format range.</span></span>
 
 
-    <span data-ttu-id="f1a22-103">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1a22-103">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="d73fc-103">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d73fc-103">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: borders
   fullName: borders
   langs:
@@ -37,10 +37,10 @@ items:
       - excel.Excel.Interfaces.ConditionalRangeBorderCollectionUpdateData
 - uid: excel.Excel.Interfaces.ConditionalRangeFormatUpdateData.fill
   summary: >-
-    <span data-ttu-id="f1a22-104">返回总体条件格式范围上定义的填充对象。</span><span class="sxs-lookup"><span data-stu-id="f1a22-104">Returns the fill object defined on the overall conditional format range.</span></span>
+    <span data-ttu-id="d73fc-104">返回总体条件格式范围上定义的填充对象。</span><span class="sxs-lookup"><span data-stu-id="d73fc-104">Returns the fill object defined on the overall conditional format range.</span></span>
 
 
-    <span data-ttu-id="f1a22-105">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1a22-105">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="d73fc-105">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d73fc-105">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: fill
   fullName: fill
   langs:
@@ -53,10 +53,10 @@ items:
       - excel.Excel.Interfaces.ConditionalRangeFillUpdateData
 - uid: excel.Excel.Interfaces.ConditionalRangeFormatUpdateData.font
   summary: >-
-    <span data-ttu-id="f1a22-106">返回总体条件格式范围上定义的 font 对象。</span><span class="sxs-lookup"><span data-stu-id="f1a22-106">Returns the font object defined on the overall conditional format range.</span></span>
+    <span data-ttu-id="d73fc-106">返回总体条件格式范围上定义的 font 对象。</span><span class="sxs-lookup"><span data-stu-id="d73fc-106">Returns the font object defined on the overall conditional format range.</span></span>
 
 
-    <span data-ttu-id="f1a22-107">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1a22-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="d73fc-107">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d73fc-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: font
   fullName: font
   langs:
@@ -69,10 +69,10 @@ items:
       - excel.Excel.Interfaces.ConditionalRangeFontUpdateData
 - uid: excel.Excel.Interfaces.ConditionalRangeFormatUpdateData.numberFormat
   summary: >-
-    <span data-ttu-id="f1a22-p101">表示 Excel 中指定范围的数字格式代码。当传递 null 时清除。</span><span class="sxs-lookup"><span data-stu-id="f1a22-p101">Represents Excel's number format code for the given range. Cleared if null is passed in.</span></span>
+    <span data-ttu-id="d73fc-p101">表示 Excel 中指定范围的数字格式代码。当传递 null 时清除。</span><span class="sxs-lookup"><span data-stu-id="d73fc-p101">Represents Excel's number format code for the given range. Cleared if null is passed in.</span></span>
 
 
-    <span data-ttu-id="f1a22-110">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="f1a22-110">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="d73fc-110">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="d73fc-110">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: numberFormat
   fullName: numberFormat
   langs:
