--- a/docs/docs-ref-autogen/excel/excel.interfaces.tablerowupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel.interfaces.tablerowupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 7205ea92f9d14a4261abb83fa105f26c4a698e95
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: 352aa4b43f3d4afbe9eb97dd91723e364e6a1def
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26229338"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29981316"
 items:
 - uid: excel.Excel.Interfaces.TableRowUpdateData
-  summary: <span data-ttu-id="9a271-101">更新数据的 TableRow 对象，在"tableRow.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="9a271-101">An interface for updating data on the TableRow object, for use in "tableRow.set({ ... })".</span></span>
+  summary: <span data-ttu-id="a751e-101">TableRow 对象，用于上的数据更新接口"tableRow.set (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="a751e-101">An interface for updating data on the TableRow object, for use in "tableRow.set(<!-- -->{ ... }<!-- -->)".</span></span>
   name: Excel.Interfaces.TableRowUpdateData
   fullName: Excel.Interfaces.TableRowUpdateData
   langs:
@@ -18,10 +18,10 @@ items:
   - excel.Excel.Interfaces.TableRowUpdateData.values
 - uid: excel.Excel.Interfaces.TableRowUpdateData.values
   summary: >-
-    <span data-ttu-id="9a271-102">表示指定区域的原始值。</span><span class="sxs-lookup"><span data-stu-id="9a271-102">Represents the raw values of the specified range.</span></span> <span data-ttu-id="9a271-103">返回的数据可能的字符串类型、 号码或一个布尔值。</span><span class="sxs-lookup"><span data-stu-id="9a271-103">The data returned could be of type string, number, or a boolean.</span></span> <span data-ttu-id="9a271-104">包含错误的单元格将返回的错误字符串。</span><span class="sxs-lookup"><span data-stu-id="9a271-104">Cells that contain an error will return the error string.</span></span>
+    <span data-ttu-id="a751e-102">表示指定区域的原始值。</span><span class="sxs-lookup"><span data-stu-id="a751e-102">Represents the raw values of the specified range.</span></span> <span data-ttu-id="a751e-103">返回的数据可能的字符串类型、 号码或一个布尔值。</span><span class="sxs-lookup"><span data-stu-id="a751e-103">The data returned could be of type string, number, or a boolean.</span></span> <span data-ttu-id="a751e-104">包含错误的单元格将返回的错误字符串。</span><span class="sxs-lookup"><span data-stu-id="a751e-104">Cells that contain an error will return the error string.</span></span>
 
 
-    <span data-ttu-id="9a271-105">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9a271-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="a751e-105">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a751e-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   name: values
   fullName: values
   langs:
