--- a/docs/docs-ref-autogen/onenote/onenote.interfaces.tableupdatedata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote.interfaces.tableupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 1cb4b90edfaaa1ae64368e7c39866bd559d59c57
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: af635cf97db76b5869353746a4fbceb811a553b8
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26228267"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29980840"
 items:
 - uid: onenote.OneNote.Interfaces.TableUpdateData
-  summary: <span data-ttu-id="00896-101">Table 对象，用于"table.set （{...}）"的数据更新接口。</span><span class="sxs-lookup"><span data-stu-id="00896-101">An interface for updating data on the Table object, for use in "table.set({ ... })".</span></span>
+  summary: <span data-ttu-id="6ae4c-101">Table 对象，用于数据更新接口"table.set (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="6ae4c-101">An interface for updating data on the Table object, for use in "table.set(<!-- -->{ ... }<!-- -->)".</span></span>
   name: OneNote.Interfaces.TableUpdateData
   fullName: OneNote.Interfaces.TableUpdateData
   langs:
@@ -18,10 +18,10 @@ items:
   - onenote.OneNote.Interfaces.TableUpdateData.borderVisible
 - uid: onenote.OneNote.Interfaces.TableUpdateData.borderVisible
   summary: >-
-    <span data-ttu-id="00896-p101">获取或设置边框是否可见。如果为 true，则边框可见；如果为 false，则边框不可见。</span><span class="sxs-lookup"><span data-stu-id="00896-p101">Gets or sets whether the borders are visible or not. True if they are visible, false if they are hidden.</span></span>
+    <span data-ttu-id="6ae4c-p101">获取或设置边框是否可见。如果为 true，则边框可见；如果为 false，则边框不可见。</span><span class="sxs-lookup"><span data-stu-id="6ae4c-p101">Gets or sets whether the borders are visible or not. True if they are visible, false if they are hidden.</span></span>
 
 
-    <span data-ttu-id="00896-104">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="00896-104">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="6ae4c-104">\[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6ae4c-104">\[ [API set: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets) \]</span></span>
   name: borderVisible
   fullName: borderVisible
   langs:
