--- a/docs/docs-ref-autogen/outlook/office.organizer.yml
+++ b/docs/docs-ref-autogen/outlook/office.organizer.yml
@@ -1,22 +1,22 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: bc173ad7c31a71912cf01c3914794889919c5a11
-ms.sourcegitcommit: a68606173477c7fb4069880eea941766c7d8c50d
+ms.openlocfilehash: 9d9d64eb9cda5def21e1d90aef7fd29026fc5a23
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/01/2019
-ms.locfileid: "29705323"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29980959"
 items:
 - uid: outlook.Office.Organizer
   summary: >-
-    <span data-ttu-id="96762-101">表示约会组织者，即使别名或委托用来创建约会。</span><span class="sxs-lookup"><span data-stu-id="96762-101">Represents the appointment organizer, even if an alias or a delegate was used to create the appointment.</span></span> <span data-ttu-id="96762-102">此对象提供了在 Outlook 加载项中获取约会的管理器值的方法。</span><span class="sxs-lookup"><span data-stu-id="96762-102">This object provides a method to get the organizer value of an appointment in an Outlook add-in.</span></span>
+    <span data-ttu-id="5f37d-101">表示约会组织者，即使别名或委托用来创建约会。</span><span class="sxs-lookup"><span data-stu-id="5f37d-101">Represents the appointment organizer, even if an alias or a delegate was used to create the appointment.</span></span> <span data-ttu-id="5f37d-102">此对象提供了在 Outlook 加载项中获取约会的管理器值的方法。</span><span class="sxs-lookup"><span data-stu-id="5f37d-102">This object provides a method to get the organizer value of an appointment in an Outlook add-in.</span></span>
 
 
-    <span data-ttu-id="96762-103">\[[API 集： 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="96762-103">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="5f37d-103">\[[API 集： 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5f37d-103">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="96762-104">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="96762-104">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="96762-105">ReadItem</span><span class="sxs-lookup"><span data-stu-id="96762-105">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="5f37d-104">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="5f37d-104">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="5f37d-105">ReadItem</span><span class="sxs-lookup"><span data-stu-id="5f37d-105">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="96762-106">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="96762-106">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="96762-107">撰写</span><span class="sxs-lookup"><span data-stu-id="96762-107">Compose</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="5f37d-106">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="5f37d-106">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="5f37d-107">撰写</span><span class="sxs-lookup"><span data-stu-id="5f37d-107">Compose</span></span></td></tr></table>
   name: Office.Organizer
   fullName: Office.Organizer
   langs:
@@ -27,17 +27,32 @@ items:
   - outlook.Office.Organizer.getAsync
 - uid: outlook.Office.Organizer.getAsync
   summary: >-
-    <span data-ttu-id="96762-108">获取[Office.EmailAddressDetails](xref:outlook.Office.EmailAddressDetails)形式的约会的组织者值中的 asyncResult.value 属性。</span><span class="sxs-lookup"><span data-stu-id="96762-108">Gets the organizer value of an appointment as an [Office.EmailAddressDetails](xref:outlook.Office.EmailAddressDetails) in the asyncResult.value property.</span></span>
+    <span data-ttu-id="5f37d-108">获取[Office.EmailAddressDetails](xref:outlook.Office.EmailAddressDetails)形式的约会的组织者值中的 asyncResult.value 属性。</span><span class="sxs-lookup"><span data-stu-id="5f37d-108">Gets the organizer value of an appointment as an [Office.EmailAddressDetails](xref:outlook.Office.EmailAddressDetails) in the asyncResult.value property.</span></span>
 
 
-    <span data-ttu-id="96762-109">\[[API 集： 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="96762-109">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="5f37d-109">\[[API 集： 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5f37d-109">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="96762-110">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="96762-110">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="96762-111">ReadItem</span><span class="sxs-lookup"><span data-stu-id="96762-111">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="5f37d-110">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="5f37d-110">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="5f37d-111">ReadItem</span><span class="sxs-lookup"><span data-stu-id="5f37d-111">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="96762-112">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="96762-112">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="96762-113">撰写</span><span class="sxs-lookup"><span data-stu-id="96762-113">Compose</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="5f37d-112">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="5f37d-112">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="5f37d-113">撰写</span><span class="sxs-lookup"><span data-stu-id="5f37d-113">Compose</span></span></td></tr></table><span data-ttu-id="5f37d-114">
+
+    ####示例</span><span class="sxs-lookup"><span data-stu-id="5f37d-114">
+
+    #### Examples</span></span>
+
+
+    ```javascript
+
+    Office.context.mailbox.item.organizer.getAsync(
+        function(asyncResult) {
+            console.log(JSON.stringify(asyncResult));
+        }
+    );
+
+    ```
   name: getAsync(options, callback)
-  fullName: getAsync
+  fullName: getAsync(options, callback)
   langs:
   - typeScript
   type: method
@@ -49,10 +64,10 @@ items:
       description: ''
     parameters:
     - id: options
-      description: '<span data-ttu-id="96762-114">包含一个或多个以下属性的对象文本。</span><span class="sxs-lookup"><span data-stu-id="96762-114">An object literal that contains one or more of the following properties.</span></span> <span data-ttu-id="96762-115">asyncContext： 开发人员可以提供他们希望在回调方法访问任何对象。</span><span class="sxs-lookup"><span data-stu-id="96762-115">asyncContext: Developers can provide any object they wish to access in the callback method.</span></span>'
+      description: '<span data-ttu-id="5f37d-115">包含一个或多个以下属性的对象文本。</span><span class="sxs-lookup"><span data-stu-id="5f37d-115">An object literal that contains one or more of the following properties.</span></span> <span data-ttu-id="5f37d-116">asyncContext： 开发人员可以提供他们希望在回调方法访问任何对象。</span><span class="sxs-lookup"><span data-stu-id="5f37d-116">asyncContext: Developers can provide any object they wish to access in the callback method.</span></span>'
       type:
-      - office.Office.AsyncContextOptions
+      - Office.AsyncContextOptions
     - id: callback
-      description: <span data-ttu-id="96762-116">该方法完成后，使用一个参数 asyncResult，即的 asyncResult 对象调用中的 callback 参数传递的函数。</span><span class="sxs-lookup"><span data-stu-id="96762-116">When the method completes, the function passed in the callback parameter is called with a single parameter, asyncResult, which is an asyncResult object.</span></span> <span data-ttu-id="96762-117">`value`属性的结果是消息的组织者值，作为 EmailAddressDetails 对象。</span><span class="sxs-lookup"><span data-stu-id="96762-117">The `value` property of the result is message's organizer value, as an EmailAddressDetails object.</span></span>
+      description: <span data-ttu-id="5f37d-117">该方法完成后，使用一个参数 asyncResult，即的 asyncResult 对象调用中的 callback 参数传递的函数。</span><span class="sxs-lookup"><span data-stu-id="5f37d-117">When the method completes, the function passed in the callback parameter is called with a single parameter, asyncResult, which is an asyncResult object.</span></span> <span data-ttu-id="5f37d-118">`value`属性的结果是消息的组织者值，作为 EmailAddressDetails 对象。</span><span class="sxs-lookup"><span data-stu-id="5f37d-118">The `value` property of the result is message's organizer value, as an EmailAddressDetails object.</span></span>
       type:
       - '(result: Office.AsyncResult<EmailAddressDetails>) => void'
