--- a/docs/docs-ref-autogen/outlook_1_2/office.userprofile.yml
+++ b/docs/docs-ref-autogen/outlook_1_2/office.userprofile.yml
@@ -1,22 +1,22 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 663a8441cd22f20785aecd349f28d5f9c3e57806
-ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
+ms.openlocfilehash: 8778d9919a9ca725a470eaf9413061ccaa8991cb
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/22/2018
-ms.locfileid: "26645297"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29979545"
 items:
 - uid: Outlook_1_2.Office.UserProfile
   summary: >-
-    <span data-ttu-id="215dd-101">有关与邮箱关联的用户的信息。</span><span class="sxs-lookup"><span data-stu-id="215dd-101">Information about the user associated with the mailbox.</span></span> <span data-ttu-id="215dd-102">这包括其帐户类型、 显示名称、 电子邮件地址和所在的时区。</span><span class="sxs-lookup"><span data-stu-id="215dd-102">This includes their account type, display name, email address, and time zone.</span></span>
+    <span data-ttu-id="222a7-101">有关与邮箱关联的用户的信息。</span><span class="sxs-lookup"><span data-stu-id="222a7-101">Information about the user associated with the mailbox.</span></span> <span data-ttu-id="222a7-102">这包括其帐户类型、 显示名称、 电子邮件地址和所在的时区。</span><span class="sxs-lookup"><span data-stu-id="222a7-102">This includes their account type, display name, email address, and time zone.</span></span>
 
 
-    <span data-ttu-id="215dd-103">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="215dd-103">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="222a7-103">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="222a7-103">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="215dd-104">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="215dd-104">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="215dd-105">ReadItem</span><span class="sxs-lookup"><span data-stu-id="215dd-105">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="222a7-104">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="222a7-104">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="222a7-105">ReadItem</span><span class="sxs-lookup"><span data-stu-id="222a7-105">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="215dd-106">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="215dd-106">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="215dd-107">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="215dd-107">Compose or read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="222a7-106">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="222a7-106">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="222a7-107">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="222a7-107">Compose or read</span></span></td></tr></table>
   name: Office.UserProfile
   fullName: Office.UserProfile
   langs:
@@ -29,15 +29,28 @@ items:
   - Outlook_1_2.Office.UserProfile.timeZone
 - uid: Outlook_1_2.Office.UserProfile.displayName
   summary: >-
-    <span data-ttu-id="215dd-108">获取用户的显示名称。</span><span class="sxs-lookup"><span data-stu-id="215dd-108">Gets the user's display name.</span></span>
+    <span data-ttu-id="222a7-108">获取用户的显示名称。</span><span class="sxs-lookup"><span data-stu-id="222a7-108">Gets the user's display name.</span></span>
 
 
-    <span data-ttu-id="215dd-109">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="215dd-109">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="222a7-109">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="222a7-109">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="215dd-110">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="215dd-110">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="215dd-111">ReadItem</span><span class="sxs-lookup"><span data-stu-id="215dd-111">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="222a7-110">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="222a7-110">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="222a7-111">ReadItem</span><span class="sxs-lookup"><span data-stu-id="222a7-111">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="215dd-112">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="215dd-112">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="215dd-113">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="215dd-113">Compose or read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="222a7-112">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="222a7-112">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="222a7-113">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="222a7-113">Compose or read</span></span></td></tr></table><span data-ttu-id="222a7-114">
+
+    ####示例</span><span class="sxs-lookup"><span data-stu-id="222a7-114">
+
+    #### Examples</span></span>
+
+
+    ```javascript
+
+    // Example: Allie Bellew
+
+    console.log(Office.context.mailbox.userProfile.displayName);
+
+    ```
   name: displayName
   fullName: displayName
   langs:
@@ -50,15 +63,28 @@ items:
       - string
 - uid: Outlook_1_2.Office.UserProfile.emailAddress
   summary: >-
-    <span data-ttu-id="215dd-114">获取用户的显示名称。</span><span class="sxs-lookup"><span data-stu-id="215dd-114">Gets the user's display name.</span></span>
+    <span data-ttu-id="222a7-115">获取用户的显示名称。</span><span class="sxs-lookup"><span data-stu-id="222a7-115">Gets the user's display name.</span></span>
 
 
-    <span data-ttu-id="215dd-115">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="215dd-115">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="222a7-116">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="222a7-116">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="215dd-116">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="215dd-116">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="215dd-117">ReadItem</span><span class="sxs-lookup"><span data-stu-id="215dd-117">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="222a7-117">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="222a7-117">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="222a7-118">ReadItem</span><span class="sxs-lookup"><span data-stu-id="222a7-118">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="215dd-118">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="215dd-118">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="215dd-119">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="215dd-119">Compose or read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="222a7-119">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="222a7-119">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="222a7-120">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="222a7-120">Compose or read</span></span></td></tr></table><span data-ttu-id="222a7-121">
+
+    ####示例</span><span class="sxs-lookup"><span data-stu-id="222a7-121">
+
+    #### Examples</span></span>
+
+
+    ```javascript
+
+    // Example: allieb@contoso.com
+
+    console.log(Office.context.mailbox.userProfile.emailAddress);
+
+    ```
   name: emailAddress
   fullName: emailAddress
   langs:
@@ -71,15 +97,28 @@ items:
       - string
 - uid: Outlook_1_2.Office.UserProfile.timeZone
   summary: >-
-    <span data-ttu-id="215dd-120">获取用户的 SMTP 电子邮件地址。</span><span class="sxs-lookup"><span data-stu-id="215dd-120">Gets the user's SMTP email address.</span></span>
+    <span data-ttu-id="222a7-122">获取用户的 SMTP 电子邮件地址。</span><span class="sxs-lookup"><span data-stu-id="222a7-122">Gets the user's SMTP email address.</span></span>
 
 
-    <span data-ttu-id="215dd-121">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="215dd-121">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="222a7-123">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="222a7-123">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="215dd-122">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="215dd-122">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="215dd-123">ReadItem</span><span class="sxs-lookup"><span data-stu-id="215dd-123">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="222a7-124">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="222a7-124">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="222a7-125">ReadItem</span><span class="sxs-lookup"><span data-stu-id="222a7-125">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="215dd-124">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="215dd-124">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="215dd-125">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="215dd-125">Compose or read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="222a7-126">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="222a7-126">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="222a7-127">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="222a7-127">Compose or read</span></span></td></tr></table><span data-ttu-id="222a7-128">
+
+    ####示例</span><span class="sxs-lookup"><span data-stu-id="222a7-128">
+
+    #### Examples</span></span>
+
+
+    ```javascript
+
+    // Example: Pacific Standard Time
+
+    console.log(Office.context.mailbox.userProfile.timeZone);
+
+    ```
   name: timeZone
   fullName: timeZone
   langs:
