--- a/docs/docs-ref-autogen/outlook_1_3/office.contact.yml
+++ b/docs/docs-ref-autogen/outlook_1_3/office.contact.yml
@@ -1,25 +1,51 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 49f0cd60eb385eb249a2b71cd13a45d1e748b81e
-ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
+ms.openlocfilehash: b07480529cd7add07c91ef771df38b0114e01d5f
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/22/2018
-ms.locfileid: "26645444"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29979482"
 items:
 - uid: Outlook_1_3.Office.Contact
   summary: >-
-    <span data-ttu-id="33f88-p101">表示存储在服务器上的联系人。仅限阅读模式。</span><span class="sxs-lookup"><span data-stu-id="33f88-p101">Represents a contact stored on the server. Read mode only.</span></span>
+    <span data-ttu-id="82136-p101">表示存储在服务器上的联系人。仅限阅读模式。</span><span class="sxs-lookup"><span data-stu-id="82136-p101">Represents a contact stored on the server. Read mode only.</span></span>
 
 
-    <span data-ttu-id="33f88-103">返回由活动项目的 getEntities 或 getEntitiesByType 方法的[Office.Entities](xref:Outlook_1_3.Office.Entities)对象的联系人属性中返回相关联的电子邮件或约会的联系人列表中。</span><span class="sxs-lookup"><span data-stu-id="33f88-103">The list of contacts associated with an email message or appointment is returned in the contacts property of the [Office.Entities](xref:Outlook_1_3.Office.Entities) object that is returned by the getEntities or getEntitiesByType method of the active item.</span></span>
+    <span data-ttu-id="82136-103">返回由活动项目的 getEntities 或 getEntitiesByType 方法的[Office.Entities](xref:Outlook_1_3.Office.Entities)对象的联系人属性中返回相关联的电子邮件或约会的联系人列表中。</span><span class="sxs-lookup"><span data-stu-id="82136-103">The list of contacts associated with an email message or appointment is returned in the contacts property of the [Office.Entities](xref:Outlook_1_3.Office.Entities) object that is returned by the getEntities or getEntitiesByType method of the active item.</span></span>
 
 
-    <span data-ttu-id="33f88-104">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="33f88-104">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="82136-104">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="82136-104">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="33f88-105">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="33f88-105">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="33f88-106">受限</span><span class="sxs-lookup"><span data-stu-id="33f88-106">Restricted</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="82136-105">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="82136-105">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="82136-106">受限</span><span class="sxs-lookup"><span data-stu-id="82136-106">Restricted</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="33f88-107">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="33f88-107">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="33f88-108">阅读</span><span class="sxs-lookup"><span data-stu-id="33f88-108">Read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="82136-107">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="82136-107">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="82136-108">阅读</span><span class="sxs-lookup"><span data-stu-id="82136-108">Read</span></span></td></tr></table><span data-ttu-id="82136-109">
+
+    ####示例</span><span class="sxs-lookup"><span data-stu-id="82136-109">
+
+    #### Examples</span></span>
+
+
+    ```javascript
+
+    var item = Office.context.mailbox.item;
+
+    // Get an array of strings that represent contacts in the current item's body.
+
+    var contacts = item.getEntitiesByType(Office.MailboxEnums.EntityType.Contact);
+
+    console.log("There are " + contacts.length + " contacts.")
+
+    contacts.forEach(function (contact) {
+        console.log("Person name: " + JSON.stringify(contact.personName));
+        console.log("Business name: " + JSON.stringify(contact.businessName));
+        console.log("Addresses: " + JSON.stringify(contact.addresses));
+        console.log("Phone numbers: " + JSON.stringify(contact.phoneNumbers));
+        console.log("Email addresses: " + JSON.stringify(contact.emailAddresses));
+        console.log("Urls: " + JSON.stringify(contact.urls));
+    });
+
+    ```
   name: Office.Contact
   fullName: Office.Contact
   langs:
@@ -34,7 +60,7 @@ items:
   - Outlook_1_3.Office.Contact.phoneNumbers
   - Outlook_1_3.Office.Contact.urls
 - uid: Outlook_1_3.Office.Contact.addresses
-  summary: <span data-ttu-id="33f88-109">包含与联系人关联的邮件和街道地址的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="33f88-109">An array of strings containing the mailing and street addresses associated with the contact.</span></span> <span data-ttu-id="33f88-110">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="33f88-110">Nullable.</span></span>
+  summary: <span data-ttu-id="82136-110">包含与联系人关联的邮件和街道地址的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="82136-110">An array of strings containing the mailing and street addresses associated with the contact.</span></span> <span data-ttu-id="82136-111">可为 NULL。</span><span class="sxs-lookup"><span data-stu-id="82136-111">Nullable.</span></span>
   name: addresses
   fullName: addresses
   langs:
@@ -46,7 +72,7 @@ items:
       type:
       - string[]
 - uid: Outlook_1_3.Office.Contact.businessName
-  summary: <span data-ttu-id="33f88-111">包含与联系人关联的企业名称的字符串。</span><span class="sxs-lookup"><span data-stu-id="33f88-111">A string containing the name of the business associated with the contact.</span></span> <span data-ttu-id="33f88-112">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="33f88-112">Nullable.</span></span>
+  summary: <span data-ttu-id="82136-112">包含与联系人关联的企业名称的字符串。</span><span class="sxs-lookup"><span data-stu-id="82136-112">A string containing the name of the business associated with the contact.</span></span> <span data-ttu-id="82136-113">可为 NULL。</span><span class="sxs-lookup"><span data-stu-id="82136-113">Nullable.</span></span>
   name: businessName
   fullName: businessName
   langs:
@@ -58,7 +84,7 @@ items:
       type:
       - string
 - uid: Outlook_1_3.Office.Contact.emailAddresses
-  summary: <span data-ttu-id="33f88-113">包含与联系人关联的 SMTP 电子邮件地址的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="33f88-113">An array of strings containing the SMTP email addresses associated with the contact.</span></span> <span data-ttu-id="33f88-114">可以为 null，</span><span class="sxs-lookup"><span data-stu-id="33f88-114">Nullable,</span></span>
+  summary: <span data-ttu-id="82136-114">包含与联系人关联的 SMTP 电子邮件地址的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="82136-114">An array of strings containing the SMTP email addresses associated with the contact.</span></span> <span data-ttu-id="82136-115">可以为 null，</span><span class="sxs-lookup"><span data-stu-id="82136-115">Nullable,</span></span>
   name: emailAddresses
   fullName: emailAddresses
   langs:
@@ -70,7 +96,7 @@ items:
       type:
       - string[]
 - uid: Outlook_1_3.Office.Contact.personName
-  summary: <span data-ttu-id="33f88-115">包含与联系人关联的人员姓名的字符串。</span><span class="sxs-lookup"><span data-stu-id="33f88-115">A string containing the name of the person associated with the contact.</span></span> <span data-ttu-id="33f88-116">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="33f88-116">Nullable.</span></span>
+  summary: <span data-ttu-id="82136-116">包含与联系人关联的人员姓名的字符串。</span><span class="sxs-lookup"><span data-stu-id="82136-116">A string containing the name of the person associated with the contact.</span></span> <span data-ttu-id="82136-117">可为 NULL。</span><span class="sxs-lookup"><span data-stu-id="82136-117">Nullable.</span></span>
   name: personName
   fullName: personName
   langs:
@@ -82,7 +108,7 @@ items:
       type:
       - string
 - uid: Outlook_1_3.Office.Contact.phoneNumbers
-  summary: <span data-ttu-id="33f88-117">包含与联系人关联的每个电话号码的 PhoneNumber 对象的数组。</span><span class="sxs-lookup"><span data-stu-id="33f88-117">An array containing a PhoneNumber object for each phone number associated with the contact.</span></span> <span data-ttu-id="33f88-118">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="33f88-118">Nullable.</span></span>
+  summary: <span data-ttu-id="82136-118">包含与联系人关联的每个电话号码的 PhoneNumber 对象的数组。</span><span class="sxs-lookup"><span data-stu-id="82136-118">An array containing a PhoneNumber object for each phone number associated with the contact.</span></span> <span data-ttu-id="82136-119">可为 NULL。</span><span class="sxs-lookup"><span data-stu-id="82136-119">Nullable.</span></span>
   name: phoneNumbers
   fullName: phoneNumbers
   langs:
@@ -94,7 +120,7 @@ items:
       type:
       - PhoneNumber[]
 - uid: Outlook_1_3.Office.Contact.urls
-  summary: <span data-ttu-id="33f88-119">包含与联系人关联的 Internet URL 的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="33f88-119">An array of strings containing the Internet URLs associated with the contact.</span></span> <span data-ttu-id="33f88-120">可为 Null。</span><span class="sxs-lookup"><span data-stu-id="33f88-120">Nullable.</span></span>
+  summary: <span data-ttu-id="82136-120">包含与联系人关联的 Internet URL 的字符串数组。</span><span class="sxs-lookup"><span data-stu-id="82136-120">An array of strings containing the Internet URLs associated with the contact.</span></span> <span data-ttu-id="82136-121">可为 NULL。</span><span class="sxs-lookup"><span data-stu-id="82136-121">Nullable.</span></span>
   name: urls
   fullName: urls
   langs:
