--- a/docs/docs-ref-autogen/outlook_1_4/office.phonenumber.yml
+++ b/docs/docs-ref-autogen/outlook_1_4/office.phonenumber.yml
@@ -1,25 +1,48 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: ea421c44b953aa0b0157950d20cc51290123b4fd
-ms.sourcegitcommit: b05ee546d9dfbc914c8d1c594d9b206b04780bbc
+ms.openlocfilehash: 769a8f03b7a24a608c1fd42873e154f5570e2de5
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/22/2018
-ms.locfileid: "26648287"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29980833"
 items:
 - uid: Outlook_1_4.Office.PhoneNumber
   summary: >-
-    <span data-ttu-id="2dba8-p101">表示项目中标识的电话号码。仅限阅读模式。</span><span class="sxs-lookup"><span data-stu-id="2dba8-p101">Represents a phone number identified in an item. Read mode only.</span></span>
+    <span data-ttu-id="304f1-p101">表示项目中标识的电话号码。仅限阅读模式。</span><span class="sxs-lookup"><span data-stu-id="304f1-p101">Represents a phone number identified in an item. Read mode only.</span></span>
 
 
-    <span data-ttu-id="2dba8-103">包含电子邮件中找到的电话号码的 PhoneNumber 对象数组在对所选项目调用 getEntities 方法时返回的 Entities 对象的 phoneNumbers 属性中返回。</span><span class="sxs-lookup"><span data-stu-id="2dba8-103">An array of PhoneNumber objects containing the phone numbers found in an email message is returned in the phoneNumbers property of the Entities object that is returned when you call the getEntities method on the selected item.</span></span>
+    <span data-ttu-id="304f1-103">包含电子邮件中找到的电话号码的 PhoneNumber 对象数组在对所选项目调用 getEntities 方法时返回的 Entities 对象的 phoneNumbers 属性中返回。</span><span class="sxs-lookup"><span data-stu-id="304f1-103">An array of PhoneNumber objects containing the phone numbers found in an email message is returned in the phoneNumbers property of the Entities object that is returned when you call the getEntities method on the selected item.</span></span>
 
 
-    <span data-ttu-id="2dba8-104">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2dba8-104">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="304f1-104">\[[API 集： 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="304f1-104">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table><tr><td>[<span data-ttu-id="2dba8-105">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="2dba8-105">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="2dba8-106">ReadItem</span><span class="sxs-lookup"><span data-stu-id="2dba8-106">ReadItem</span></span></td></tr>
+    <table><tr><td>[<span data-ttu-id="304f1-105">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="304f1-105">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="304f1-106">ReadItem</span><span class="sxs-lookup"><span data-stu-id="304f1-106">ReadItem</span></span></td></tr>
 
 
-    <tr><td>[<span data-ttu-id="2dba8-107">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="2dba8-107">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="2dba8-108">阅读</span><span class="sxs-lookup"><span data-stu-id="2dba8-108">Read</span></span></td></tr></table>
+    <tr><td>[<span data-ttu-id="304f1-107">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="304f1-107">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="304f1-108">阅读</span><span class="sxs-lookup"><span data-stu-id="304f1-108">Read</span></span></td></tr></table><span data-ttu-id="304f1-109">
+
+    ####示例</span><span class="sxs-lookup"><span data-stu-id="304f1-109">
+
+    #### Examples</span></span>
+
+
+    ```javascript
+
+    var item = Office.context.mailbox.item;
+
+    // Get an array of strings that represent phone numbers in the current item's body.
+
+    var phoneNumbers = item.getEntitiesByType(Office.MailboxEnums.EntityType.PhoneNumber);
+
+    console.log("There are " + phoneNumbers.length + " phone numbers.")
+
+    phoneNumbers.forEach(function (phoneNumber) {
+        console.log("Phone number: " + JSON.stringify(phoneNumber.phoneString));
+        console.log("Type: " + JSON.stringify(phoneNumber.type));
+        console.log("Source text: " + JSON.stringify(phoneNumber.originalPhoneString));
+    });
+
+    ```
   name: Office.PhoneNumber
   fullName: Office.PhoneNumber
   langs:
@@ -31,7 +54,7 @@ items:
   - Outlook_1_4.Office.PhoneNumber.phoneString
   - Outlook_1_4.Office.PhoneNumber.type
 - uid: Outlook_1_4.Office.PhoneNumber.originalPhoneString
-  summary: <span data-ttu-id="2dba8-109">获取在项中识别为电话号码的文本。</span><span class="sxs-lookup"><span data-stu-id="2dba8-109">Gets the text that was identified in an item as a phone number.</span></span>
+  summary: <span data-ttu-id="304f1-110">获取在项中识别为电话号码的文本。</span><span class="sxs-lookup"><span data-stu-id="304f1-110">Gets the text that was identified in an item as a phone number.</span></span>
   name: originalPhoneString
   fullName: originalPhoneString
   langs:
@@ -43,7 +66,7 @@ items:
       type:
       - string
 - uid: Outlook_1_4.Office.PhoneNumber.phoneString
-  summary: <span data-ttu-id="2dba8-p102">获取包含电话号码的字符串。该字符串只包含电话号码中的数字，而不包括原始项目中存在的括号和连字符等字符。</span><span class="sxs-lookup"><span data-stu-id="2dba8-p102">Gets a string containing a phone number. This string contains only the digits of the telephone number and excludes characters like parentheses and hyphens, if they exist in the original item.</span></span>
+  summary: <span data-ttu-id="304f1-p102">获取包含电话号码的字符串。该字符串只包含电话号码中的数字，而不包括原始项目中存在的括号和连字符等字符。</span><span class="sxs-lookup"><span data-stu-id="304f1-p102">Gets a string containing a phone number. This string contains only the digits of the telephone number and excludes characters like parentheses and hyphens, if they exist in the original item.</span></span>
   name: phoneString
   fullName: phoneString
   langs:
@@ -55,7 +78,7 @@ items:
       type:
       - string
 - uid: Outlook_1_4.Office.PhoneNumber.type
-  summary: '<span data-ttu-id="2dba8-112">获取标识电话号码的类型的字符串：Home、Work、Mobile 和 Unspecified。</span><span class="sxs-lookup"><span data-stu-id="2dba8-112">Gets a string that identifies the type of phone number: Home, Work, Mobile, Unspecified.</span></span>'
+  summary: '<span data-ttu-id="304f1-113">获取标识电话号码的类型的字符串：Home、Work、Mobile 和 Unspecified。</span><span class="sxs-lookup"><span data-stu-id="304f1-113">Gets a string that identifies the type of phone number: Home, Work, Mobile, Unspecified.</span></span>'
   name: type
   fullName: type
   langs:
