--- a/docs/docs-ref-autogen/powerpoint.yml
+++ b/docs/docs-ref-autogen/powerpoint.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 8d5a83fafd294666c9bc55d074ee77203ec635ba
-ms.sourcegitcommit: 2dcedf6deec4167dca476a42dad411e28cc92a97
+ms.openlocfilehash: e991f9f629cce48dccb4587d83e43eed37143808
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "29384795"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29981001"
 items:
 - uid: powerpoint
   name: powerpoint
@@ -16,11 +16,11 @@ items:
   - powerpoint.PowerPoint.createPresentation
 - uid: powerpoint.PowerPoint.createPresentation
   summary: >-
-    <span data-ttu-id="06adb-101">创建并打开一个新的演示文稿。</span><span class="sxs-lookup"><span data-stu-id="06adb-101">Creates and opens a new presentation.</span></span> <span data-ttu-id="06adb-102">（可选） 演示文稿可以预置的 base64 编码.pptx 文件。</span><span class="sxs-lookup"><span data-stu-id="06adb-102">Optionally, the presentation can be pre-populated with a base64-encoded .pptx file.</span></span>
+    <span data-ttu-id="2a224-101">创建并打开一个新的演示文稿。</span><span class="sxs-lookup"><span data-stu-id="2a224-101">Creates and opens a new presentation.</span></span> <span data-ttu-id="2a224-102">（可选） 演示文稿可以预置的 base64 编码.pptx 文件。</span><span class="sxs-lookup"><span data-stu-id="2a224-102">Optionally, the presentation can be pre-populated with a base64-encoded .pptx file.</span></span>
 
 
-    <span data-ttu-id="06adb-103">\[[API 集： PowerPointApi 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]</span><span class="sxs-lookup"><span data-stu-id="06adb-103">\[ [API set: PowerPointApi 1.1](/office/dev/add-ins/reference/javascript-api-for-office) \]</span></span>
-  name: createPresentation(base64File)
+    <span data-ttu-id="2a224-103">\[[API 集： PowerPointApi 1.1](/office/dev/add-ins/reference/javascript-api-for-office)\]</span><span class="sxs-lookup"><span data-stu-id="2a224-103">\[ [API set: PowerPointApi 1.1](/office/dev/add-ins/reference/javascript-api-for-office) \]</span></span>
+  name: PowerPoint.createPresentation
   fullName: PowerPoint.createPresentation
   langs:
   - typeScript
@@ -30,9 +30,9 @@ items:
     return:
       type:
       - Promise<void>
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"06adb-104\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"06adb-104\">Examples</span></span>\n\n```javascript\nvar myFile = document.getElementById(\"file\");\nvar reader = new FileReader();\n\nreader.onload = function (event) {\n    // strip off the metadata before the base64-encoded string\n    var startIndex = event.target.result.indexOf(\"base64,\");\n    var copyBase64 = event.target.result.substr(startIndex + 7);\n\n    PowerPoint.createPresentation(copyBase64);        \n};\n\n// read in the file as a data URL so we can parse the base64-encoded string\nreader.readAsDataURL(myFile.files[0]);\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"2a224-104\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"2a224-104\">Examples</span></span>\n\n```javascript\nvar myFile = document.getElementById(\"file\");\nvar reader = new FileReader();\n\nreader.onload = function (event) {\n    // strip off the metadata before the base64-encoded string\n    var startIndex = event.target.result.indexOf(\"base64,\");\n    var copyBase64 = event.target.result.substr(startIndex + 7);\n\n    PowerPoint.createPresentation(copyBase64);        \n};\n\n// read in the file as a data URL so we can parse the base64-encoded string\nreader.readAsDataURL(myFile.files[0]);\n```"
     parameters:
     - id: base64File
-      description: <span data-ttu-id="06adb-105">可选。</span><span class="sxs-lookup"><span data-stu-id="06adb-105">Optional.</span></span> <span data-ttu-id="06adb-106">Base64 编码.pptx 文件中。</span><span class="sxs-lookup"><span data-stu-id="06adb-106">The base64-encoded .pptx file.</span></span> <span data-ttu-id="06adb-107">默认值为 null。</span><span class="sxs-lookup"><span data-stu-id="06adb-107">The default value is null.</span></span>
+      description: <span data-ttu-id="2a224-105">可选。</span><span class="sxs-lookup"><span data-stu-id="2a224-105">Optional.</span></span> <span data-ttu-id="2a224-106">Base64 编码.pptx 文件中。</span><span class="sxs-lookup"><span data-stu-id="2a224-106">The base64-encoded .pptx file.</span></span> <span data-ttu-id="2a224-107">默认值为 null。</span><span class="sxs-lookup"><span data-stu-id="2a224-107">The default value is null.</span></span>
       type:
       - string
