--- a/docs/docs-ref-autogen/visio/visio.interfaces.shapecollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/visio/visio.interfaces.shapecollectionupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: c035703423a1d11820f1f46a1be2ff8f802e825f
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: 12839d90d45c7d759fbd8a711c12e66f770b7df8
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26235617"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29981351"
 items:
 - uid: visio.Visio.Interfaces.ShapeCollectionUpdateData
-  summary: <span data-ttu-id="1054f-101">更新数据的 ShapeCollection 对象，在"shapeCollection.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="1054f-101">An interface for updating data on the ShapeCollection object, for use in "shapeCollection.set({ ... })".</span></span>
+  summary: <span data-ttu-id="45e8b-101">ShapeCollection 对象，用于上的数据更新接口"shapeCollection.set (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="45e8b-101">An interface for updating data on the ShapeCollection object, for use in "shapeCollection.set(<!-- -->{ ... }<!-- -->)".</span></span>
   name: Visio.Interfaces.ShapeCollectionUpdateData
   fullName: Visio.Interfaces.ShapeCollectionUpdateData
   langs:
