--- a/docs/docs-ref-autogen/visio/visio.interfaces.shapeviewupdatedata.yml
+++ b/docs/docs-ref-autogen/visio/visio.interfaces.shapeviewupdatedata.yml
@@ -1,13 +1,13 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: f0459176af41cf3081c30df66a5d508142b3999e
-ms.sourcegitcommit: 016e17422cf62dc9f1de1809666e9244e41cc1a9
+ms.openlocfilehash: 63d71f9cdc21affef3b620510cea734d2b00f109
+ms.sourcegitcommit: d356f1545c328d4b59ce814fcab8191e4231f1dc
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/09/2018
-ms.locfileid: "26222023"
+ms.lasthandoff: 02/13/2019
+ms.locfileid: "29981008"
 items:
 - uid: visio.Visio.Interfaces.ShapeViewUpdateData
-  summary: <span data-ttu-id="d93e7-101">更新数据的 ShapeView 对象，在"shapeView.set （{...}）"中使用的接口。</span><span class="sxs-lookup"><span data-stu-id="d93e7-101">An interface for updating data on the ShapeView object, for use in "shapeView.set({ ... })".</span></span>
+  summary: <span data-ttu-id="98a49-101">更新对 ShapeView 对象，用于数据接口"shapeView.set (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="98a49-101">An interface for updating data on the ShapeView object, for use in "shapeView.set(<!-- -->{ ... }<!-- -->)".</span></span>
   name: Visio.Interfaces.ShapeViewUpdateData
   fullName: Visio.Interfaces.ShapeViewUpdateData
   langs:
@@ -18,10 +18,10 @@ items:
   - visio.Visio.Interfaces.ShapeViewUpdateData.highlight
 - uid: visio.Visio.Interfaces.ShapeViewUpdateData.highlight
   summary: >-
-    <span data-ttu-id="d93e7-102">表示形状周围的突出显示内容。</span><span class="sxs-lookup"><span data-stu-id="d93e7-102">Represents the highlight around the shape.</span></span>
+    <span data-ttu-id="98a49-102">表示形状周围的突出显示内容。</span><span class="sxs-lookup"><span data-stu-id="98a49-102">Represents the highlight around the shape.</span></span>
 
 
-    <span data-ttu-id="d93e7-103">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="d93e7-103">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+    <span data-ttu-id="98a49-103">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="98a49-103">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
   name: highlight
   fullName: highlight
   langs:
